# flo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bug.flo  compile_selfhost.sh  debug.ll  flo  flo.py  flo.spec  idea.flo  makefile  map.flo  massif.out.26553  massif.out.28435  output.ll  printAll.flo  requirements.txt  runtests.py  script.flo  setup_bootstrap.sh  sum.c  test  test.c  test.flo  test.ll  test_flo  todo.md  vpp.py
advent-of-code/2021/: day1.flo  day2.flo  day3.flo  day4.flo  day5.flo  utils.flo
bootstrap/: flo.ll  helper.c  helper.cc
builtins/: array.flo  file.flo  map.flo  range.flo  string.flo  types.flo
compiler/: codegen.flo  debug.flo  debugInfo.flo  error.flo  flo.flo  lexer.flo  main.flo  makefile  parser.flo  readme.md  typechecker.flo  types.flo  utils.flo
compiler/codegen/: llvm.flo
compiler/llvm/: bindings_test.flo
docs/: README.md  concepts.md  grammar.txt  update.md
editor/: README.md
editor/flo-vscode/: CHANGELOG.md  README.md
editors/: grammar.txt
editors/vscode/: README.md  package.json
examples/: OOP.flo  array.flo  arrays.flo  ascii.flo  bad-design-bug.flo  bin.flo  bug.flo  bugs.flo  cgbug.flo  classes.flo  client.flo  collatz.flo  conditionals.flo  dict.flo  enums.flo  fcfnc.flo  fetch.flo  fib.flo  fiz_buz.flo  fnc.flo  func.flo  gol.flo  hello.flo  helloworld.flo  httpserver.flo  is_as_operator.flo  jit.flo  json.flo  new.flo  oop.flo  perceptron.flo  pow_test.flo  quicksort.flo  ranges.flo  segfault.flo  server.flo  snake.flo  strings.flo  test.flo  test2.flo
examples/advent-of-code-2021/: day1.flo  day2.flo  day3.flo  day4.flo  day5.flo  day6.flo  day7.flo  utils.flo
examples/qoi/: encoder.flo  qoi-encoder.flo
examples/vm/: main.flo  stackvm.flo
examples/wordle_solver/: main.flo  utils.flo
flolib/: builtins.flo
flolib/builtins/: builtins.flo
flolib/collections/: map.flo
flolib/io/: file.flo
flolib/math/: math.flo  vector2.flo
flolib/net/: httpserver.flo  socket.flo
flolib/sys/: lib.flo
hostcompiler/: analyzer.py  astree.py  builtIns.py  compiler.py  context.py  errors.py  flo.py  flo.spec  flotypes.py  install.py  lexer.py  nodefinder.py  parser.py  requirements.txt
lib/builtins/: builtins.flo  rt.flo
lib/io/: file.flo
lib/math/: math.flo
lib/net/: httpclient.flo  httpserver.flo  request.flo  response.flo  socket.flo  uri.flo
lib/path/: path.flo
lib/sys/: lib.flo
selfhost/: analyzer.flo  codegen.flo  debug.flo  error.flo  flo.flo  lexer.flo  main.flo  parser.flo  readme.md
src/: analyzer.py  astree.py  builtIns.py  builtins.flo  cache.py  codegen.flo  codegenDI.flo  codegenMod.flo  compiler.flo  compiler.py  context.py  debug.flo  error.flo  errors.py  file.flo  flag.flo  flags.flo  flo.py  flotypes.py  itypes.py  lexer.flo  lexer.py  main.flo  nodefinder.py  parser.flo  parser.py  runtime.flo  typechecker.flo  types.flo  utils.flo  utils.py
src/ast/: lexer.py  nodes.py  parser.py  tokens.py  visitor.py
src/buildchain/: BuildCache.py  __init__.py  checker.py  compiler.py  intepreter.py  lexer.py  parser.py  tokens.py  typechecker.py
src/context/: __init__.py
src/errors/: __init__.py  error.py  expectedCharError.py  illegalCharError.py  rtError.py  syntaxError.py  typeError.py
src/interfaces/: astree.py
src/llvm/: Error.flo  FloLLVMBind.cc  FloLLVMBind.cpp  TargetInitializationMacros.c  analysis.flo  bitwriter.flo  core.flo  debugInfo.flo  executionEngine.flo  linker.flo  llvm.flo  passBuilder.flo  passManagerBuilder.flo  target.flo  targetMachine.flo  transforms.flo  types.flo
src/runtime/: runtime-ir.ll  runtime-lib.flo  runtime-src.flo
src/stack/: symbolTable.py
src/std/: __init__.py
src/utils/: position.py  range.py
src/valtypes/: __init__.py  array.py  boolean.py  checks.py  dict.py  func.py  number.py  string.py  valType.py
syntax-highlighting/flo/: vsc-extension-quickstart.md
tests/: arrays.flo  arrays.txt  casting.flo  casting.txt  functions.flo  functions.txt  math.flo  math.txt  strings.flo  strings.txt  test.py
tests/basics/: arith_pred.flo  array_hint.flo  arrays.flo  basic-typecast-to-not-type-error.flo  bools.flo  bools2.flo  comments.flo  del_op.flo  float-arithmetic.flo  float-int-casting.flo  for-loop.flo  int-arithmetic.flo  int.flo  not_int.flo  null-checking.flo  null.flo  pass-by-value-types.flo  record-ptr-auto-deref.flo  str-to-num.flo  vars.flo
tests/builtins/: array-add.flo  array-resize.flo  array.flo  bitcasting.flo  iterators.flo  ranges.flo  str_array.flo  str_incr.flo  string_neq.flo  string_replace.flo  strings.flo
tests/classes/: class-generics.flo  class-heap.flo  class-inherit2.flo  class-inheritance-ternary-edge-case.flo  class-inheritance.flo  class-operators.flo  class-polymorphism.flo  class-stack.flo  class-static-props.flo  class-super-constructor-call.flo  classes-heap.flo  classes-modifiers.flo  classes-operators.flo  classes-stack.flo  null-checking-objects.flo
tests/cstrings/: ascii-escape.flo  cstring-add.flo  cstrings.flo  cstrng-index.flo  string-template-lit.flo
tests/cstrings.flo/: ascii-escape.flo  cstrings.flo
tests/enums/: conditionals.flo  enums-basic.flo  enums-values.flo  enums-variants.flo
tests/flow-controls/: if-conditionals.flo  while-loop.flo
tests/functions/: default-func-params.flo  externfuncs.flo  fc-funcs.flo  func-call-with-incorrect-arg-num-error.flo  func-call.flo  func-named-mixed-named-not-named.flo  func-named-repeated-named-arg-error.flo  func-named-swapped.flo  func-named-unknown-arg-name-error.flo  func-named.flo  instrinsic-call-named-error.flo
tests/imports/: import-generic.flo  import-member-rename.flo  import-module-namespace.flo  import-module.flo
tests/match/: basic-match-success.flo  match-mismatch-types.flo  match-object-eq-success.flo
tests/memory/: basic-ptr-comparason.flo  del_memory_method_call.flo  globals.flo  nest-objects-to-str.flo  new_operator_should_fail.flo  ptr-arith.flo  ptr-arrays.flo  ptr-intrinsics.flo  ptrincr.flo
tests/parser/: nested-generic-templ.flo
tests/records/: record-assignment-fail.flo  record-assignment-pass.flo  (+5 more)
(+29 files in other folders)
